--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
         </div>
       </form>
     </div>
-    <script type="module" src="./index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
