--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
           <input type="button" value="/" class="operator box-1" />
         </div>
         <div class="box">
-          <input type="button" value="7" />
-          <input type="button" value="8" />
-          <input type="button" value="9" />
-          <input type="button" value="*" class="operator" />
+          <input type="button" value="7" class="box-2" />
+          <input type="button" value="8" class="box-2" />
+          <input type="button" value="9" class="box-2" />
+          <input type="button" value="*" class="box-2 operator" />
         </div>
         <div class="box">
           <input type="button" value="4" class="box-3" />
@@ -45,6 +45,6 @@
         </div>
       </form>
     </div>
-    <script src="./index.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
